--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Lo Shun Keung</title>
-    <meta name="description" content="My profile">
+    <title>Harry Potter</title>
+    <meta name="description" content="The description of the site.">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.a53406ee.css" as="style"><link rel="preload" href="/assets/js/app.9bd0860d.js" as="script"><link rel="prefetch" href="/assets/js/1.a5aa6a96.js"><link rel="prefetch" href="/assets/js/10.871dae84.js"><link rel="prefetch" href="/assets/js/11.0851ee8b.js"><link rel="prefetch" href="/assets/js/3.62362218.js"><link rel="prefetch" href="/assets/js/4.9911692f.js"><link rel="prefetch" href="/assets/js/5.08d52854.js"><link rel="prefetch" href="/assets/js/6.8c7a9514.js"><link rel="prefetch" href="/assets/js/7.2fc5ce89.js"><link rel="prefetch" href="/assets/js/8.70a75ee7.js"><link rel="prefetch" href="/assets/js/9.771a4099.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.a53406ee.css">
+    <link rel="preload" href="/assets/css/0.styles.4eb9ebaa.css" as="style"><link rel="preload" href="/assets/js/app.609a838f.js" as="script"><link rel="prefetch" href="/assets/js/1.a5aa6a96.js"><link rel="prefetch" href="/assets/js/10.ff1ff19d.js"><link rel="prefetch" href="/assets/js/11.a83978db.js"><link rel="prefetch" href="/assets/js/12.fe520e18.js"><link rel="prefetch" href="/assets/js/13.c66e3d84.js"><link rel="prefetch" href="/assets/js/14.253c91c0.js"><link rel="prefetch" href="/assets/js/15.8a6284c8.js"><link rel="prefetch" href="/assets/js/16.7a66e019.js"><link rel="prefetch" href="/assets/js/3.62362218.js"><link rel="prefetch" href="/assets/js/4.538545bd.js"><link rel="prefetch" href="/assets/js/5.7cf598ae.js"><link rel="prefetch" href="/assets/js/6.8c7a9514.js"><link rel="prefetch" href="/assets/js/7.2fc5ce89.js"><link rel="prefetch" href="/assets/js/8.257e4da7.js"><link rel="prefetch" href="/assets/js/9.5e836785.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.4eb9ebaa.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.9bd0860d.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.609a838f.js" defer></script>
   </body>
 </html>
