--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="My profile">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.a53406ee.css" as="style"><link rel="preload" href="/assets/js/app.786b8e49.js" as="script"><link rel="prefetch" href="/assets/js/1.a5aa6a96.js"><link rel="prefetch" href="/assets/js/10.871dae84.js"><link rel="prefetch" href="/assets/js/11.0851ee8b.js"><link rel="prefetch" href="/assets/js/3.62362218.js"><link rel="prefetch" href="/assets/js/4.538545bd.js"><link rel="prefetch" href="/assets/js/5.08d52854.js"><link rel="prefetch" href="/assets/js/6.8c7a9514.js"><link rel="prefetch" href="/assets/js/7.2fc5ce89.js"><link rel="prefetch" href="/assets/js/8.70a75ee7.js"><link rel="prefetch" href="/assets/js/9.771a4099.js">
+    <link rel="preload" href="/assets/css/0.styles.a53406ee.css" as="style"><link rel="preload" href="/assets/js/app.0c1c3b17.js" as="script"><link rel="prefetch" href="/assets/js/1.a5aa6a96.js"><link rel="prefetch" href="/assets/js/10.871dae84.js"><link rel="prefetch" href="/assets/js/11.0851ee8b.js"><link rel="prefetch" href="/assets/js/3.62362218.js"><link rel="prefetch" href="/assets/js/4.538545bd.js"><link rel="prefetch" href="/assets/js/5.08d52854.js"><link rel="prefetch" href="/assets/js/6.8c7a9514.js"><link rel="prefetch" href="/assets/js/7.2fc5ce89.js"><link rel="prefetch" href="/assets/js/8.70a75ee7.js"><link rel="prefetch" href="/assets/js/9.771a4099.js">
     <link rel="stylesheet" href="/assets/css/0.styles.a53406ee.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.786b8e49.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.0c1c3b17.js" defer></script>
   </body>
 </html>
